--- a/database_cleanup/views/purge_tables.xml
+++ b/database_cleanup/views/purge_tables.xml
@@ -27,9 +27,7 @@
         <field name="inherit_id" ref="tree_purge_line" />
         <field name="mode">primary</field>
         <field name="arch" type="xml">
-            <field name="name" position="after">
-                <field name="table_type" />
-            </field>
+            <data />
         </field>
     </record>
 
